<resources>
    <string name="app_name">Android Engineer CodeCheck</string>
    <string name="searchInputText_hint">GitHub のリポジトリを検索できるよー</string>
    <string name="stars_count">%s stars</string>
    <string name="watchers_count">%s watchers</string>
    <string name="forks_count">%s forks</string>
    <string name="open_issues_count">%s open issues</string>
    <string name="name_default_value_text">JetBrains/kotlin</string>
    <string name="language_default_value_text">Written in Kotlin</string>
    <string name="stars_default_value_text">38530 stars</string>
    <string name="watchers_default_value_text">38530 watchers</string>
    <string name="forks_default_values_text">4675 forks</string>
    <string name="open_issues_default_value_text">131 open issues</string>
    <string name="error_message_text">検索に失敗しました。\n時間を開けて、再度お試しください。</string>
</resources>