<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/owner_icon_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@null"
        android:src="@drawable/jetbrains"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="240dp" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_default_value_text"
        android:textColor="@color/customTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/owner_icon_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/language_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/language_default_value_text"
        android:textColor="@color/customTextColor"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/name_view"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/stars_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/stars_default_value_text"
        android:textAlignment="textEnd"
        android:textColor="@color/customTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/name_view" />

    <TextView
        android:id="@+id/watchersView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/watchers_default_value_text"
        android:textAlignment="textEnd"
        android:textColor="@color/customTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/stars_view" />

    <TextView
        android:id="@+id/forks_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/forks_default_values_text"
        android:textAlignment="textEnd"
        android:textColor="@color/customTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/watchersView" />

    <TextView
        android:id="@+id/open_issues_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/open_issues_default_value_text"
        android:textAlignment="textEnd"
        android:textColor="@color/customTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/forks_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
